--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Talk Share for Google Meet",
+    "name": "Talk-o-meter for Google Meet",
     "version": "1.0",
-    "description": "Don't hog the meeting! Talk Share adds an indicator to Google Meet to track, rank and compare how much you talk in meetings.",
+    "description": "Don't hog the meeting! Talk-o-meter adds an indicator to Google Meet to track, rank and compare how much you speak in meetings.",
     "content_scripts": [
         {
           "matches": ["https://meet.google.com/*"],
@@ -9,7 +9,10 @@
           "run_at": "document_idle"
         }
       ],
-    "web_accessible_resources": ["talkshare.js"],
-    "icons": { "128": "talkshare_icon128.png" },
+    "web_accessible_resources": ["talk-o-meter.js"],
+    "icons": { 
+        "128": "talk-o-meter_icon128.png",
+        "48": "talk-o-meter_icon48.png" 
+    },
     "manifest_version": 2
 }
