Reduce permissions and update for new CSP
* Reduce the permissions request in the manifest.json as per Google's
  recommendation.
* Work around new CSP TrustedHTML policy introduced in Google Meet.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,7 @@
       },
       "default_title": "Talk-o-meter for Google Meet"
     },
-    "permissions": ["activeTab", "scripting"],
+    "permissions": [],
     "host_permissions": ["https://meet.google.com/*"],
     "content_scripts": [
       {
